# BBB_led_flask_web_control

./: README.md  main.py  pyproject.toml
templates/: index.html
