[tool.poetry]
name = "bbb-led-flask-web-control"
version = "1.0.0"
description = "Control the peripheral LED via webserver with Flask based on BeagleBone Black."
authors = ["KafCoppelia <k740677208@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
gpiod = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
